--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/jquery": "^3.5.5",
     "@types/node": "^15.0.1",
     "@types/react": "^17.0.4",
     "bootstrap": "^5.0.0-beta3",
