ajustes no card das informações

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.3",
     "@types/jquery": "^3.5.5",
     "@types/node": "^15.0.1",
     "@types/react": "^17.0.4",
